# adan_sumer_project

./: README.md  Zi Longhao  sun
VisionTest2/: CMakeLists.txt
VisionTest2/VisionTest/: Camera.cpp  Camera.h  VisionTest.pro  armor.h  common.cpp  common.h  detector.cpp  detector.h  main.cpp  predict.cpp  predict.h  serialport.cpp  serialport.h  solveangle.cpp  solveangle.h
kammer/: main.cpp  readme.md  text.ipynb
task_1/: point.md
